text-overflow fix

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -54,7 +54,11 @@
     padding: 10px;
   }
   .report-container {
-    max-width: 250px;
+    max-width: 230px;
+    max-height: 500px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
