--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -22,8 +22,8 @@
 
 .listing-image-container-sm {
   img {
-    max-height: 115px;
-    max-width: 115px
+    max-height: 100px;
+    max-width: 100px
   }
 }
 
